--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>javascriptquizz</h1>
+    <h2>quesrions</h2>
  <script src="./script.js"></script>
 </body>
-</html>
+</html>1
