made highscore view working

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
      <header>
-       <a href="">View High score</a>
+       <span onclick="viewHighScore()">View High score </span>
 
        <span>
         Time: <span id="time">0</span>
